# AMVerge-CLI

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  pyproject.toml
amverge/: __init__.py  cli.py  pipeline.py  ui.py  wizard.py
amverge/commands/: about.py  bench.py  detect.py  doctor.py  export.py  gpu.py  merge.py  usage.py
amverge/core/: __init__.py  amverge_video.py  codec_utils.py  diagnostics.py  keyframe_align.py  scene_detection.py  scene_detector.py  scene_exporter.py  similarity_checker.py  smart_cut.py  thumbnail_generator.py
amverge_cli/: __init__.py  cli.py  pipeline.py  ui.py  wizard.py
amverge_cli/commands/: about.py  changelog.py  detect.py  info.py
amverge_cli/core/: keyframes.py  segmenter.py  video.py
docs/: cli-reference.md  contributing.md  installation.md  library.md
examples/: README.md
examples/custom-pipeline/: README.md  full_pipeline.py
examples/cutting/: 01_smart_cut.py  02_ffmpeg_segment.py  03_single_scene.py  README.md
examples/detect/: 01_basic_detect.py  02_transnetv2_detect.py  03_edge_detect.py  04_custom_settings.py  README.md
examples/diagnostics/: 01_gpu_check.py  02_version_info.py  README.md
examples/export/: 01_copy_export.py  02_reencode_export.py  03_merge_export.py  README.md
examples/info-probe/: 01_video_info.py  02_probe.py  03_hevc_check.py  README.md
examples/interpolation/: 02_rife_interpolate.py  README.md
examples/keyframes/: 01_extract_keyframes.py  02_align_scenes.py  README.md
examples/similarity/: 01_find_similar.py  README.md
examples/thumbnails/: 01_make_thumbnails.py  (+1 more)
(+58 files in other folders)
